[package]
name = "example_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }

# [build-dependencies]
# pyo3-build-config = "*"


[lib]
path = "rust_code/lib.rs"
name = "example_module" # Must match module function name in lib.rs
