[tool.poetry]
name = "rust-python-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
maturin = "^1.7.1"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
